--- a/Bigram_for_review.ipynb
+++ b/Bigram_for_review.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Device: mps\n"
+     ]
+    }
+   ],
    "source": [
     "# %load data_preparation/v4.py\n",
     "# Removes the one-hot encoding as a step performed on xs\n",
@@ -24,7 +32,11 @@
     "    def forward(self, x):\n",
     "        return self.W[x]\n",
     "\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "device = \"mps\" if getattr(torch,'has_mps',False) \\\n",
+    "    else \"gpu\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "print(f'Device: {device}')\n",
     "\n",
     "g = torch.Generator().manual_seed(42)\n",
     "\n",
@@ -66,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +92,7 @@
     "\n",
     "def make_train_step_fn(model, loss_fn, optimizer):\n",
     "    def train_step(x, y):\n",
+    "        \n",
     "        model.train()\n",
     "        yhat = model(x)\n",
     "        loss = loss_fn(yhat, y) + smoothing()\n",
@@ -112,19 +125,69 @@
     "\n",
     "writer = SummaryWriter('runs/bigram_classifier')\n",
     "x_dummy, y_dummy = next(iter(train_loader))\n",
-    "writer.add_graph(model, x_dummy.to(device))"
+    "#writer.add_graph(model, x_dummy.to(device))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final training loss: 2.3745994567871094\n"
+      "Epoch 1/50\n",
+      "Epoch 2/50\n",
+      "Epoch 3/50\n",
+      "Epoch 4/50\n",
+      "Epoch 5/50\n",
+      "Epoch 6/50\n",
+      "Epoch 7/50\n",
+      "Epoch 8/50\n",
+      "Epoch 9/50\n",
+      "Epoch 10/50\n",
+      "Epoch 11/50\n",
+      "Epoch 12/50\n",
+      "Epoch 13/50\n",
+      "Epoch 14/50\n",
+      "Epoch 15/50\n",
+      "Epoch 16/50\n",
+      "Epoch 17/50\n",
+      "Epoch 18/50\n",
+      "Epoch 19/50\n",
+      "Epoch 20/50\n",
+      "Epoch 21/50\n",
+      "Epoch 22/50\n",
+      "Epoch 23/50\n",
+      "Epoch 24/50\n",
+      "Epoch 25/50\n",
+      "Epoch 26/50\n",
+      "Epoch 27/50\n",
+      "Epoch 28/50\n",
+      "Epoch 29/50\n",
+      "Epoch 30/50\n",
+      "Epoch 31/50\n",
+      "Epoch 32/50\n",
+      "Epoch 33/50\n",
+      "Epoch 34/50\n",
+      "Epoch 35/50\n",
+      "Epoch 36/50\n",
+      "Epoch 37/50\n",
+      "Epoch 38/50\n",
+      "Epoch 39/50\n",
+      "Epoch 40/50\n",
+      "Epoch 41/50\n",
+      "Epoch 42/50\n",
+      "Epoch 43/50\n",
+      "Epoch 44/50\n",
+      "Epoch 45/50\n",
+      "Epoch 46/50\n",
+      "Epoch 47/50\n",
+      "Epoch 48/50\n",
+      "Epoch 49/50\n",
+      "Epoch 50/50\n",
+      "Final training loss: 3.1924378871917725\n"
      ]
     }
    ],
@@ -145,10 +208,11 @@
     "    return numpy.mean(mini_batch_losses)\n",
     "\n",
     "for epoch in range(epochs):\n",
+    "    print(f'Epoch {epoch+1}/{epochs}')\n",
     "    loss = mini_batch(device, train_loader, train_step_fn)\n",
     "    losses.append(loss)\n",
     "\n",
-    "    writer.add_scalars(main_tag=f'lr={lr}&momentum={momentum}&epochs={epochs}&batch={n_train_batch}&smoothing=0.01', tag_scalar_dict={'training': loss}, global_step=epoch)\n",
+    "    writer.add_scalars(main_tag=f'MPS&lr={lr}&momentum={momentum}&epochs={epochs}&batch={n_train_batch}&smoothing=0.01', tag_scalar_dict={'training': loss}, global_step=epoch)\n",
     "\n",
     "writer.close()\n",
     "\n",
@@ -200,6 +264,52 @@
     "\n",
     "plt.plot(losses)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python Platform: macOS-10.16-x86_64-i386-64bit\n",
+      "PyTorch Version: 1.13.0\n",
+      "\n",
+      "Python 3.9.13 (main, Aug 25 2022, 18:29:29) \n",
+      "[Clang 12.0.0 ]\n",
+      "Pandas 1.4.4\n",
+      "Scikit-Learn 1.0.2\n",
+      "GPU is NOT AVAILABLE\n",
+      "MPS (Apple Metal) is AVAILABLE\n",
+      "Target device is mps\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What version of Python do you have?\n",
+    "import sys\n",
+    "import platform\n",
+    "import torch\n",
+    "import pandas as pd\n",
+    "import sklearn as sk\n",
+    "\n",
+    "has_gpu = torch.cuda.is_available()\n",
+    "has_mps = getattr(torch,'has_mps',False)\n",
+    "device = \"mps\" if getattr(torch,'has_mps',False) \\\n",
+    "    else \"gpu\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "print(f\"Python Platform: {platform.platform()}\")\n",
+    "print(f\"PyTorch Version: {torch.__version__}\")\n",
+    "print()\n",
+    "print(f\"Python {sys.version}\")\n",
+    "print(f\"Pandas {pd.__version__}\")\n",
+    "print(f\"Scikit-Learn {sk.__version__}\")\n",
+    "print(\"GPU is\", \"available\" if has_gpu else \"NOT AVAILABLE\")\n",
+    "print(\"MPS (Apple Metal) is\", \"AVAILABLE\" if has_mps else \"NOT AVAILABLE\")\n",
+    "print(f\"Target device is {device}\")"
+   ]
   }
  ],
  "metadata": {
@@ -209,16 +319,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.4 (default, Apr 26 2021, 23:56:36) \n[Clang 12.0.0 (clang-1200.0.32.28)]"
   },
   "orig_nbformat": 4,
   "vscode": {
